refactor : change getLast